--- a/client/src/components/Country/Country.module.css
+++ b/client/src/components/Country/Country.module.css
@@ -1,6 +1,7 @@
 .countryCard{
      height: auto;
-     background-color: rgb(223, 223, 223);
+    
+     background-color: rgba(223, 223, 223, 0.219);
      border-radius: 10px;
      padding: 30px 10px;
      flex-wrap: wrap;
@@ -49,4 +50,8 @@
 }
 .countryCard:hover {
    transform: scale(1.2,1.2);
+   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+   transition-duration: 300ms;
+   cursor: pointer;
+   box-shadow: rgba(87, 86, 86, 0.8) 0px 18px 50px -10px;
 }
