--- a/client/src/components/ContainerCountries/ContainerCountries.module.css
+++ b/client/src/components/ContainerCountries/ContainerCountries.module.css
@@ -1,30 +1,49 @@
-.container{
+.container {
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-bottom: 100px;
-}
-
-.containerCards{
+     width: 80vw;
+   }
+   
+   
+   .containerCards {
      margin: auto;
      margin-top: 50px;
-     width: 1200px;
+     max-width: 1200px;
      padding: 30px;
-     
      background-color: #6363638e;
      border-radius: 25px;
-
+   
      display: grid;
-     grid-template-columns: repeat(3, 1fr);
+     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
      gap: 40px;
      margin-bottom: 35px;
-}
-
-.noHay{
-     background-color: rgb(223, 223, 223);
+   }
+   
+   .card {
+     background-color: #fff;
      border-radius: 15px;
-     border: 1px solid red;
-     color: red;
-     grid-column: 2/3;
+     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+     margin: 10px;
+     max-width: 250px;
+     padding: 15px;
      text-align: center;
-}
+     font-size: 14px;
+   }
+   
+   .card img {
+     max-width: 100%;
+     height: auto;
+     margin-bottom: 15px;
+   }
+   
+   .card h2 {
+     font-size: 18px;
+     margin-bottom: 5px;
+   }
+   
+   .card p {
+     margin-bottom: 10px;
+   }
+   
