--- a/client/src/components/Country/Country.module.css
+++ b/client/src/components/Country/Country.module.css
@@ -1,10 +1,8 @@
 .countryCard{
      height: auto;
-    
      background-color: rgba(223, 223, 223, 0.219);
      border-radius: 10px;
-     padding: 30px 10px;
-     flex-wrap: wrap;
+     padding: 5% 2%;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -14,13 +12,13 @@
 
 .countryInfo{
      text-align: center;
-     line-height: 1;
-     
+     line-height: 1.2;
+     margin: 2% 0;
 }
 
 .countryImg img{
-     max-width: 200px;
-     height: 140px;
+     max-width: 100%;
+     height: auto;
      border-radius: 10px;
 }
 
@@ -30,28 +28,49 @@
 
 .button{
      display: inline-block;
-     margin-top: 10px;
-     padding: 10px 0;
+     margin-top: 5%;
+     padding: 5% 0;
      background-color: #026773;
      text-align: center;
      color: white;
-     width: 240px;
-     height: auto;
-     font-size: 20px;
+     width: 80%;
+     font-size: 1.5em; /* valor menor para el tamaño de fuente */
      font-weight: 700;
      border-radius: 8px;
      border: none;
-     
 }
+
 
 .button:hover{
      background-color: #3CA6A6;
      color: white;
 }
+
 .countryCard:hover {
    transform: scale(1.2,1.2);
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    transition-duration: 300ms;
    cursor: pointer;
    box-shadow: rgba(87, 86, 86, 0.8) 0px 18px 50px -10px;
+}
+
+@media only screen and (max-width: 768px) {
+  .countryCard {
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .countryInfo {
+    margin: 5% 0;
+  }
+  
+  .button {
+    margin-top: 10%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .countryImg img {
+    max-width: 80%;
+  }
 }
