--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,56 +1,65 @@
-.container{
-     min-width: 1200px;
-     margin: auto;     
-}
-
-.navBar{
+/* Estilos para el contenedor principal */
+.navBar {
      display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 60px;
+     width: 100%;
      position: fixed;
      top: 0;
-     width: 100%;
-     height: 40px;
-     font-size: 20px;
-     font-weight: 400;
-}
-
-span{
-     font-weight: 700;
-}
-
-.link{
-     color: white;
-}
-
-.navBarBg{
-     background-color: #6363638e;
-}
-
-.navBarDiv{
-     display: flex;
-     justify-content: space-between; 
-     align-items: center;
-}
-
-.footerInfo{
-     line-height: .5;
-}
-
-.links{
+     left: 0;
+     z-index: 100;
+   }
+   
+   /* Estilos para el fondo de la barra de navegación */
+   .navBarBg {
+     background-color: #33333369;
+   }
+   
+   /* Estilos para el contenedor interno */
+   .navBarDiv {
      display: flex;
      justify-content: space-between;
-     gap: 20px;
-}
-
-@media(max-width: 768px){
-     .container{
-          width: 768px;
-     }
-     .navBarDiv{
-          display: flex;
-          flex-direction: column;
-     }
-}
-
-.link:hover{
+     align-items: center;
+     height: 100%;
+     width: 100%;
+     max-width: 1200px;
+     padding: 0 20px;
+   }
+   
+   /* Estilos para el contenedor de los enlaces */
+   .links {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+   }
+   
+   /* Estilos para cada página en el menú */
+   .page {
+     margin-right: 20px;
+   }
+   
+   /* Estilos para el enlace de la página */
+   .linkp, .linka {
+     color: white;
+     font-size: 18px;
+     font-weight: 400;
+     text-decoration: none;
+     margin-right: 10px;
+   }
+   
+   /* Estilos para el enlace activo de la página */
+   .linkp.active, .linka.active {
      color: #3CA6A6;
-}
+     font-weight: 700;
+   }
+   
+
+   .link{
+     color: white;
+ }
+
+ .link:hover{
+     color: #3CA6A6;
+ }
+ 
