--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  max-width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,8 +8,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./img/background.jpg");
   background-attachment: fixed;
+  background-size: cover;
   animation: slider 450s infinite linear;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -17,6 +20,6 @@ code {
 
 @keyframes slider {
   to {
-    background-position: 2048px 0;
+    background-position: 100% 0;
   }
 }
